tests/errors/err_undefined_on.bas
10 INPUT X
20 ON X GOTO 100,200,300
30 PRINT "DONE"
